@@ -901,7 +901,8 @@ plugin.named.org.dspace.content.crosswalk.DisseminationCrosswalk = \
 plugin.selfnamed.org.dspace.content.crosswalk.DisseminationCrosswalk = \
   org.dspace.content.crosswalk.MODSDisseminationCrosswalk , \
   org.dspace.content.crosswalk.XSLTDisseminationCrosswalk, \
-  org.dspace.content.crosswalk.QDCCrosswalk
+  org.dspace.content.crosswalk.QDCCrosswalk, \
+  org.dspace.content.crosswalk.XHTMLHeadDisseminationCrosswalk
 
 # Packager Plugins:
 
